public class Axis
{
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";

  //  public const string MOUSEX = "Mouse X";
  //  public const string MOUSEY = "Mouse Y";
}

public class Tags
{
    public const string PLAYER_TAG = "Player";
    public const string COLLECTABLE_TAG = "Collectable";
}

public class AnimationTags
{
    public const string WALK_PARAMETER = "Walk";
    public const string JUMP_PARAMETER = "Jump";
    public const string DOUBLE_JUMP_PARAMETER = "Double jump";

    public const string ATTACK_1_PARAMETER = "Attack 1";
    public const string ATTACK_2_PARAMETER = "Attack 2";
    public const string ATTACK_3_PARAMETER = "Attack 3";
    public const string SPECIAL_ATTACK_PARAMETER = "Special attack";

    public const string CHARGE_PARAMETER = "Charge";
}
